// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbAuthentication check Authentication with mode API Key 1`] = `
<div>
  <h6>
    Authentication
  </h6>
  <div
    class="row"
  >
    <div
      class="col-md-4"
    >
      <form
        class=""
      >
        <label
          class="form-label"
          for="key"
        >
          Key
        </label>
        <input
          aria-invalid="false"
          class="oi-form-input form-control"
          id="key"
          name="key"
          type="text"
          value="aaaaaa"
        />
        <div
          class="invalid-feedback"
        />
      </form>
    </div>
    <div
      class="col-md-4"
    >
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="secretKey"
        >
          Secret
        </label>
        <div
          class="input-group"
        >
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="secretKey"
            name="secretKey"
            type="password"
            value="sssss"
          />
        </div>
        <div
          class="invalid-feedback"
          style="display: inline;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OIbAuthentication check Authentication with mode Basic 1`] = `
<div>
  <h6>
    Authentication
  </h6>
  <div
    class="row"
  >
    <div
      class="col-md-4"
    >
      <form
        class=""
      >
        <label
          class="form-label"
          for="username"
        >
          User name
        </label>
        <input
          aria-invalid="false"
          class="oi-form-input form-control"
          id="username"
          name="username"
          type="text"
          value="user"
        />
        <div
          class="invalid-feedback"
        />
      </form>
    </div>
    <div
      class="col-md-4"
    >
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="password"
        >
          Password
        </label>
        <div
          class="input-group"
        >
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="password"
            name="password"
            type="password"
            value="pass"
          />
        </div>
        <div
          class="invalid-feedback"
          style="display: inline;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OIbAuthentication check Authentication with mode Bearer 1`] = `
<div>
  <h6>
    Authentication
  </h6>
  <div
    class="row"
  >
    <div
      class="col-md-4"
    >
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="token"
        >
          Token
        </label>
        <div
          class="input-group"
        >
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="token"
            name="token"
            type="password"
            value="sssss"
          />
        </div>
        <div
          class="invalid-feedback"
          style="display: inline;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OIbAuthentication check Authentication with mode null 1`] = `
<div>
  <h6>
    Authentication
  </h6>
  <div
    class="row"
  >
    <div
      class="col-md-2"
    >
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="type"
        >
          Type
        </label>
        <select
          aria-invalid="false"
          class="oi-form-input form-select"
          id="type"
          name="type"
        >
          <option
            value="Basic"
          >
            Basic
          </option>
          <option
            value="API Key"
          >
            API Key
          </option>
          <option
            value="Bearer"
          >
            Bearer
          </option>
        </select>
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col-md-4"
    >
      <form
        class=""
      >
        <label
          class="form-label"
          for="username"
        >
          User name
        </label>
        <input
          aria-invalid="false"
          class="oi-form-input form-control"
          id="username"
          name="username"
          type="text"
          value="user"
        />
        <div
          class="invalid-feedback"
        />
      </form>
    </div>
    <div
      class="col-md-4"
    >
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="password"
        >
          Password
        </label>
        <div
          class="input-group"
        >
          <input
            aria-invalid="false"
            class="oi-form-input form-control"
            id="password"
            name="password"
            type="password"
            value="pass"
          />
        </div>
        <div
          class="invalid-feedback"
          style="display: inline;"
        />
      </div>
    </div>
  </div>
</div>
`;
